# PyramidScript

./: CMakeLists.txt
api/: pyramidscript.h
include/: compiler.h  tokenizer.h  vm.h
sources/: compiler.c  pyramidscript.c  tokenizer.c  vm.c
tests/: script_dev_tester.c
